--- a/src/app/features/gis/components/policy/components/risk-details/risk-details.component.html
+++ b/src/app/features/gis/components/policy/components/risk-details/risk-details.component.html
@@ -24,6 +24,11 @@
 
                                 </div>
                             </div>
+                            <!-- Display error message under the field -->
+                            <div *ngIf="policyRiskForm.get('insureds.client.id').hasError('required') && policyRiskForm.get('insureds.client.id').touched"
+                                class="form-text text-danger">
+                                Insured is required.
+                            </div>
 
                         </div>
                         <div class=" mb-1 col-sm-4 col-12">
@@ -45,7 +50,7 @@
                                 id="riskDescription">{{'gis.policy.risk_description' | translate}}</label><br>
                             <input type="text" id="riskDescription" class="form-control form-control-sm mb-1 riskInput"
                                 formControlName="propertyDescription" data-bs-toggle="tooltip" data-bs-placement="right"
-                                title="Tooltip on right" readonly  pTooltip="This is not an editable field" 
+                                title="Tooltip on right" readonly pTooltip="This is not an editable field"
                                 tooltipPosition="left">
 
                             <!-- Display error message under the field -->
@@ -57,15 +62,15 @@
                         <div class=" mb-1 col-sm-4 col-12" *ngIf="motorProduct">
                             <label for="riskDescription" class="required risk-label"
                                 id="riskDescription">{{'gis.policy.risk_description' | translate}}</label><br>
-                            <input type="text" id="riskDescription" class="form-control form-control-sm mb-1 riskInput"
-                                formControlName="subClassCode" [(ngModel)]="vehiclemakeModel" data-bs-toggle="tooltip"
+                            <input type="text" id="propertyDescription" class="form-control form-control-sm mb-1 riskInput"
+                                formControlName="propertyDescription" [(ngModel)]="vehiclemakeModel" data-bs-toggle="tooltip"
                                 data-bs-placement="right" title="Tooltip on right" readonly>
 
                             <!-- Display error message under the field -->
-                            <!-- <div *ngIf="policyRiskForm.get('property_description').hasError('required') && policyRiskForm.get('property_description').touched"
+                            <div *ngIf="policyRiskForm.get('propertyDescription').hasError('required') && policyRiskForm.get('propertyDescription').touched"
                                 class="form-text text-danger">
                                 Risk Description is required.
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                     <!-- ROW 2 -->
@@ -74,13 +79,7 @@
                             <label for="subclass" class="required risk-label" id="subclass">{{'gis.policy.subclass' |
                                 translate}}</label>
 
-                            <!-- <select class="form-select form-control-sm selectInput" id="subclass"
-                                formControlName="subClassCode" (change)="onSubclassSelected($event)"
-                                [(ngModel)]="subclass">
-                                <option value=""  ></option>
-                                <option *ngFor="let subclass of allMatchingSubclasses" [value]="subclass.code">
-                                    {{subclass.description | sentenceCase}}</option>
-                            </select> -->
+                           
 
                             <p-dropdown [options]="allMatchingSubclasses" optionValue="code" optionLabel="description"
                                 formControlName="subClassCode" (onChange)="onSubclassSelected($event.value)"
@@ -93,6 +92,9 @@
                                 Subclass is required.
                             </div>
                         </div>
+
+
+                        
                         <div class=" mb-1 col-sm-4 col-12">
                             <label for="binder" class="required risk-label" id="binder">{{'gis.policy.binder' |
                                 translate}}</label>
@@ -133,10 +135,10 @@
 
 
                             <p-dropdown [options]="subclassCoverType" optionValue="code" optionLabel="description"
-                                formControlName="subClassCode" (onChange)="onCoverTypeSelected($event.value)"
+                                formControlName="coverTypeCode" (onChange)="onCoverTypeSelected($event.value)"
                                 [placeholder]="coverType" [filterBy]="'description'" [filter]="true"
                                 [ngModel]="coverType"></p-dropdown>
-                               
+
                             <!-- Display error message under the field -->
                             <div *ngIf="policyRiskForm.get('coverTypeCode').hasError('required') && policyRiskForm.get('coverTypeCode').touched"
                                 class="form-text text-danger">
@@ -158,7 +160,13 @@
                                 <p-dropdown [options]="vehicleMakeList" optionValue="code" optionLabel="name"
                                     formControlName="vehicleMake" (onChange)="onVehicleMakeSelected($event.value)"
                                     [placeholder]="vehicleMake" [filterBy]="'name'" [filter]="true"
-                                    [ngModel]="vehicleMake"></p-dropdown>
+                                    [ngModel]="vehicleMake"></p-dropdown> 
+                                    <!-- Display error message under the field -->
+                                    <div *ngIf="policyRiskForm.get('vehicleMake').hasError('required') && policyRiskForm.get('vehicleMake').touched"
+                                    class="form-text text-danger">
+                                    Vehicle Make is required.
+                                </div>
+
                             </div>
                             <div class=" mb-1 col-sm-4 col-12">
                                 <label for="vehicleModel" class="required risk-label" id="vehicleModel">Vehicle
@@ -168,10 +176,15 @@
                                     placeholder=" vehicleModel" [filterBy]="'name'" [filter]="true"
                                     [ngModel]="vehicleModel"></p-dropdown> -->
 
-                                    <p-dropdown [options]="filteredVehicleModel" optionValue="code" optionLabel="name"
+                                <p-dropdown [options]="filteredVehicleModel" optionValue="code" optionLabel="name"
                                     formControlName="vehicleModel" (onChange)="onVehicleModelSelected($event.value)"
                                     [placeholder]="vehicleModel" [filterBy]="'name'" [filter]="true"
                                     [ngModel]="vehicleModel"></p-dropdown>
+                                     <!-- Display error message under the field -->
+                                     <div *ngIf="policyRiskForm.get('vehicleModel').hasError('required') && policyRiskForm.get('vehicleModel').touched"
+                                     class="form-text text-danger">
+                                     Vehicle Model is required.
+                                 </div>
                             </div>
                             <div class=" mb-1 col-sm-4 col-12 ">
                                 <label for="riskCoverDays" class=" risk-label required" id="modelYear">Model
@@ -184,11 +197,11 @@
                                 </select>
 
 
-                                <!-- Display error message under the field -->
-                                <!-- <div *ngIf="policyProductForm.get('product_code').hasError('required') && policyProductForm.get('product_code').touched"
-                                class="form-text text-danger">
-                                Product is required.
-                            </div> -->
+                                  <!-- Display error message under the field -->
+                                  <div *ngIf="policyRiskForm.get('modelYear').hasError('required') && policyRiskForm.get('modelYear').touched"
+                                  class="form-text text-danger">
+                                   Model year is required.
+                              </div>
                             </div>
                         </div>
                         <div class="row mb-4">
@@ -244,13 +257,22 @@
                                 translate}}</label>
                             <input type="date" id="coverFrom" class="form-control form-control-sm mb-1 riskInput"
                                 [(ngModel)]="passedCoverFrom" formControlName="dateCoverFrom">
+                                 <!-- Display error message under the field -->
+                            <div *ngIf="policyRiskForm.get('dateCoverFrom').hasError('required') && policyRiskForm.get('dateCoverFrom').touched"
+                            class="form-text text-danger">
+                            Cover From Date is required.
+                        </div>
                         </div>
                         <div class=" mb-1 col-sm-4 col-12">
                             <label for="coverTo" class="required risk-label" id="coverTo">{{'gis.policy.cover_to' |
                                 translate}}</label>
                             <input type="date" id="coverTo" class="form-control form-control-sm mb-1 riskInput"
                                 [(ngModel)]="passedCoverTo" formControlName="dateCoverTo">
-
+                                      <!-- Display error message under the field -->
+                            <div *ngIf="policyRiskForm.get('dateCoverTo').hasError('required') && policyRiskForm.get('dateCoverTo').touched"
+                            class="form-text text-danger">
+                            Cover To Date is required.
+                        </div>
                         </div>
                         <div class=" mb-1 col-sm-4 col-12 ">
                             <label for="riskCoverDays" class=" risk-label"
@@ -593,6 +615,11 @@
                                 <option value="N">{{'gis.policy.no' | translate}}</option>
 
                             </select>
+                             <!-- Display error message under the field -->
+                             <div *ngIf="policyRiskForm.get('newRisk').hasError('required') && policyRiskForm.get('newRisk').touched"
+                             class="form-text text-danger">
+                             New risk is required.
+                         </div>
 
                         </div>
 
@@ -694,9 +721,10 @@
                             <div class="mb-1 col-sm-4 col-12">
                                 <label for="newRisk" class=" risk-label"
                                     id="riskLocation">{{'gis.policy.risk_class'|translate}}</label>
-                               
-                                <p-dropdown [options]="riskClassList" optionValue="code" optionLabel="description" placeholder=" "
-                                [filterBy]="'description'" [filter]="true" formControlName="riskClass"></p-dropdown>
+
+                                <p-dropdown [options]="riskClassList" optionValue="code" optionLabel="description"
+                                    placeholder=" " [filterBy]="'description'" [filter]="true"
+                                    formControlName="riskClass"></p-dropdown>
 
                             </div>
 
