--- a/src/app/features/lms/grp/components/claims/components/payment-processing/payment-processing.component.html
+++ b/src/app/features/lms/grp/components/claims/components/payment-processing/payment-processing.component.html
@@ -4,6 +4,8 @@
           <app-stepper [currentStep]="5" [stepperData]="steps"></app-stepper>
         </div>
       </div>
+      <ngx-spinner name="download_view" type="ball-clip-rotate-multiple" [fullScreen]="true" color="#00529B" size="medium"
+    bdColor="rgba(255, 255, 255, 0.9)"></ngx-spinner>
     <div class="container">
       <div class="title" *ngIf="!isVoucherDischarged">{{ "lms.grp.claims.payment_voucher_processing" | translate }}</div>
       <div class="title" *ngIf="!isVoucherProcessed && isVoucherDischarged">{{ "lms.grp.claims.Voucher_authorization" | translate }}</div>
@@ -26,7 +28,7 @@
           <label for="paymentMode" style="color: black;">{{ "lms.grp.claims.payment_mode" | translate }}</label>
           <select class="form-select" id="paymentMode" formControlName="paymentMode">
             <option selected="true" disabled="disabled"></option>
-            <option *ngFor="let mode of " [value]="mode">{{ mode | titlecase }}</option>
+            <option *ngFor="let mode of payMethod$ | async" [value]="mode.value">{{ mode.name | titlecase }} ({{ mode.value }})</option>
           </select>
         </div>
       </div>
@@ -44,7 +46,7 @@
             {{ "lms.grp.claims.account_number" | translate }}
           </label>
           <p-dropdown #dropdown [options]="accountDetails" formControlName="accountNumber" optionLabel="accountNumber"
-            [filter]="true" [filterBy]="'accountNumber'" [style]="{ width: '100%',  height: '37px', 'line-height': '10px' }">
+            [filter]="true" [filterBy]="'accountNumber'" [editable]="true" [showClear]="true" [style]="{ width: '100%',  height: '37px', 'line-height': '10px' }">
             <ng-template let-item pTemplate="item">
               <div class="d-flex justify-content-between">
                 <div>{{ item.accountNumber }}</div>
