--- a/src/app/features/gis/components/policy/components/import-risks/import-risks.component.html
+++ b/src/app/features/gis/components/policy/components/import-risks/import-risks.component.html
@@ -166,7 +166,7 @@
                         </tr>
                     </ng-template>
                 </p-table>
-                <div class="d-flex justify-content-end mt-4">
+                <div class="d-flex mt-4">
                     <button type="button" class="btn btn-outline-primary me-3" (click)="clear()">Clear</button>
                     <button type="button" class="btn btn-primary" (click)="addPolicyRisk()">Load</button>
                 </div>
