--- a/src/app/features/gis/components/policy/components/risk-details/risk-details.component.html
+++ b/src/app/features/gis/components/policy/components/risk-details/risk-details.component.html
@@ -54,10 +54,10 @@
                                 tooltipPosition="left">
 
                             <!-- Display error message under the field -->
-                            <div *ngIf="policyRiskForm.get('propertyDescription').hasError('required') && policyRiskForm.get('propertyDescription').touched"
+                            <!-- <div *ngIf="policyRiskForm.get('propertyDescription').hasError('required') && policyRiskForm.get('propertyDescription').touched"
                                 class="form-text text-danger">
                                 Risk Description is required.
-                            </div>
+                            </div> -->
                         </div>
                         <div class=" mb-1 col-sm-4 col-12" *ngIf="motorProduct">
                             <label for="riskDescription" class="required risk-label"
@@ -1691,22 +1691,23 @@
                             </div>
                         </div>
 
-                        <p-table [value]="csvRisksList" dataKey="code" editMode="row"
+                        <p-table [value]="scheduleArray" dataKey="code" editMode="row"
                             [tableStyle]="{'min-width': '50rem'}" selectionMode="single" [(selection)]="selectedSection"
                             styleClass="p-datatable-sm" responsiveLayout="scroll" class='ui-datatable'
                             [autoLayout]="true">
                             <ng-template pTemplate="header">
                                 <tr class="mb-4">
-                                    <th style="width:15%">Client ID</th>
-                                    <th style="width:15%">Client Name</th>
-                                    <th style="width:5%">WEF</th>
-                                    <th style="width:7%">WET</th>
-                                    <th style="width:15%">Risk Duplicated</th>
-                                    <th style="width:10%">Class</th>
-                                    <th style="width:15%">Cover Type</th>
-                                    <th style="width:10%">Premium </th>
-                                    <th style="width:12%">Taxes</th>
-                                    <!-- <th style="width:7%;"></th> -->
+                                    <th  style="width: 10%;">Reg No</th>
+                                    <th  style="width: 10%;">Make</th>
+                                    <th  style="width: 15%;">Cubic Capacity</th>
+                                    <th  style="width: 7%;">Yr manft</th>
+                                    <th  style="width: 12%;">Carry capacity</th>
+                                    <th  style="width: 8%;">Value</th>
+                                    <th  style="width: 10%;">Body Type</th>
+                                    <th  style="width: 10%;">Cover Type </th>
+                                    <th  style="width: 10%;">Chasis no</th>
+                                    <th  style="width: 15%;">Engine no</th>
+                                    <th  style="width: 12%;">Color</th>
 
 
 
@@ -1714,15 +1715,17 @@
                             </ng-template>
                             <ng-template pTemplate="body" let-data let-editing="editing" let-ri="rowIndex">
                                 <tr>
-                                    <td>{{data.clientId}}</td>
-                                    <td>{{data.clientName}}</td>
-                                    <td>{{data.WEF}}</td>
-                                    <td>{{data.WET}}</td>
-                                    <td>{{data.riskDuplicated}}</td>
-                                    <td>{{data.class}}</td>
+                                    <td>{{data.registrationNumber}}</td>
+                                    <td>{{data.Make}}</td>
+                                    <td>{{data.carryCapacity}}</td>
+                                    <td>{{data.yearOfManufacture}}</td>
+                                    <td>{{data.carryCapacity}}</td>
+                                    <td>{{data.value}}</td>
+                                    <td>{{data.bodyType}}</td>
                                     <td>{{data.coverType}}</td>
-                                    <td>{{data.premium}}</td>
-                                    <td>{{data.taxes}}</td>
+                                    <td>{{data.chasisNumber}}</td>
+                                    <td>{{data.engineNumber}}</td>
+                                    <td>{{data.color}}</td>
                                 </tr>
 
 
