--- a/src/app/features/lms/ind/components/quotation/components/product/product.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/product/product.component.html
@@ -56,11 +56,22 @@
           <div class="row">
 
             <div class="col-lg-4 col-md-6 col-sm-12 px-4 text-black">
-               <div>&nbsp;</div>
+              <div>&nbsp;</div>
                 <label class="form-check-label required">{{ coverageOptionLabel }}</label>
               <div>
-                <div class="mb-1"></div>
-                <input type="text" class="form-control" formControlName="" style="padding-right: 2rem"/>
+                <!-- Radio buttons only visible when calculate_from is 'B' -->
+                <div class="mb-1" *ngIf="calculateFrom === 'B'">
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="sum_as" formControlName="sa_prem_select" value="SA"/>
+                    <label class="form-check-label" for="sum_as">Sum Assured</label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" id="prem" formControlName="sa_prem_select" value="P"/>
+                    <label class="form-check-label" for="prem">Premium</label>
+                  </div>
+                </div>
+                <!-- The input field for sum assured or premium -->
+                <input type="text" class="form-control" formControlName="sa_prem_amount" style="padding-right: 2rem"/>
               </div>
             </div>
 
