--- a/src/app/features/lms/grp/components/dashboard/components/policy-details/policy-details.component.css
+++ b/src/app/features/lms/grp/components/dashboard/components/policy-details/policy-details.component.css
@@ -9,10 +9,15 @@
     align-items: center;
     background-color: white;
     border-radius: 4px;
-    min-height: 40px;
+    min-height: 48px;
     margin-bottom: 8px;
     padding-left: 40px;
-    color: black;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #000000;
 }
 
 .container div {
@@ -42,34 +47,77 @@
 }
 
 .title-desc {
-    font-size: 16px;
-    font-weight: 500;
     margin-bottom: 10px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    color: #00529B;
+    white-space: nowrap;
 }
 
 .table-label {
-    color: #868E96;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: rgba(0, 0, 0, 0.5);
 }
 
 .table-label-desc {
-    color: black;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #000000;
 }
 
 .receipts-summary {
     text-align: right;
+    padding-right: 60px;
 }
 
 .pension-table-container {
     overflow-x: auto;
     display: flex;
+    margin-top: 20px;
+}
+
+.emp-contr {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 23px;
+    color: #000000;
+    white-space: nowrap;
 }
 
 .statement-desc {
-    font-size: 16px;
+    font-family: 'Roboto';
+    font-style: normal;
     font-weight: 500;
+    font-size: 20px;
+    line-height: 23px;
+    color: #00529B;
     margin-bottom: 10px;
     margin-top: 20px;
     text-align: center;
+}
+
+.account-totals {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    color: #000000;
+    text-align: center;
+    margin-bottom: 10px;
+    margin-top: 20px;
 }
 
 .pension-table {
@@ -83,6 +131,12 @@
 
 /* Styles for the link */
 .download-link {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #00529B;
     text-decoration: underline;
     display: inline-block;
     position: relative;
@@ -90,8 +144,7 @@
 }
 
 .download-link:hover {
-    color: #00529B;
-    text-decoration: underline;
+    color: #2f91e7;
 }
 
 .pdf-icon {
@@ -106,10 +159,16 @@ table {
   }
   
   th {
-    text-align: left;
-    padding: 8px;
-    background-color: #BAD0E4;
-    white-space: nowrap;
+      text-align: left;
+      padding: 8px;
+      background-color: #BAD0E4;
+      white-space: nowrap;
+      font-family: 'Roboto';
+      font-style: normal;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 19px;
+      color: rgba(0, 0, 0, 0.7);
   }
   
   td {
@@ -184,14 +243,23 @@ label, select, input {
  }
 
  .label-name {
-     color: grey;
-     margin-right: 10px;
-     white-space: nowrap;
- }
+    margin-right: 10px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: rgba(0, 0, 0, 0.5);
+}
 
- .label-desc {
-     color: black;
- }
+.label-desc {
+    color: #000000;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+}
 
  .info {
     display: flex;
@@ -259,8 +327,23 @@ label, select, input {
     margin-bottom: 40px;
 }
 
+.td-label {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    color: #00529B;
+}
+
 .td-data {
-    color: black;
+    white-space: nowrap;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: #000000;
 }
 
 td:first-child {
@@ -277,6 +360,14 @@ td:first-child {
     padding: 1px 4px 1px 20px;
     border-radius: 0 10px 0 20px;
     width: 100px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 20px;
+    color: #FFFFFF;
+    justify-content: center;
+    text-align: center;
 }
 
 .title {
